--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
             }
             #phone-img{
                 margin-top: 10px;
+                
             }
             #phone-img img{
                 display: block !important;
+                border-radius: 50%;
             }
             /* #academic{
                 display: none !important;
